  it a bit to include new app logo
* System tray icon now changes when all downloads are paused (fixes bug #8)
* When eMusic/J is opened, any downloads that had failed will now be tried
  again (fixes #11)
* Requeuing a track resets its download failure count (fixes #11)
* 'Finished' has been renamed to 'Completed' (fixes #12)
V0.16 2006-01-15
* New downloads aren't added to the list if they're already on it.
* If a download fails 5 times, it won't be automatically started again
* Refactored the display of extra information (in the info panel) to be
  much more general, to allow more things to be displayed
* Album covers now show the cover when they are selected
* Genre and duration now show for tracks in the info panel
* Added 'undocumented' option "noServer" to preferences. If the line:
  noServer=1
  is added to ~/.emusicj/emusicj.props then the client/server business won't
  happen, which will lead to faster startup on the machines that it doesn't 
  work on.
* Drop directory support now works. The program will monitor a specified 
  directory and autoload any .emp files that end up in there.
V0.15 2006-01-04
* The display for the title and download status no longer gets ugly when the 
  title is long. Now the download status will always be displayed, and the title 
  truncated
* 'Stopped' has been renamed to 'Cancelled' in order to be a bit clearer about
  what is really going on
* Added a 'Cancel all' menu item
* Added a status bar that indicates when the downloads are paused, this'll
  probably be used for more things in the future
V0.14 2005-12-29
* System tray icon, supports hiding/showing the window, quitting the program, 
  shows download status
* Application icon
* Added ability to defer events within the GUI, so that if the GUI hasn't yet 
  been displayed, messages or actions can be buffered until the GUI comes up
V0.13 2005-12-16:
* Fixed bug that made download of MP3s break (oops)
* Very minor change to how resuming is handled
V0.12 2005-11-28: